--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -42,6 +42,7 @@ body {
   display: flex;
   flex-direction: row;
   margin: 0 auto;
+  align-content: center;
 }
 
 .btn {
@@ -77,7 +78,7 @@ h3 {
   padding-top: 30px;
 }
 
-.results-container {
+.final-drink {
   display: flex;
   flex-direction: column;
   align-items: center;
