--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -51,7 +51,8 @@ body {
   color: #F7EFCE !important;
 }
 
-.btn:hover {
+.btn:hover,
+.login-btn:hover {
   background-color: #F7EFCE !important;
   color: black !important;
 }
@@ -77,6 +78,7 @@ h3 {
   align-items: center;
   justify-content: center;
   padding: 30px;
+  display: none;
 }
 
 .final-drink {
@@ -86,6 +88,7 @@ h3 {
   line-height: 50px;
   padding: 30px;
   font-family: 'Lato', sans-serif;
+  display: none;
 }
 
 .drinkThumb1 {
@@ -105,3 +108,48 @@ h3 {
 td {
   line-height: 5px;
 }
+
+.login-input,
+.login-btn {
+  font-weight: 700;
+}
+
+.login-btn {
+  margin-top: 10px;
+  border: solid 1px #F7EFCE !important;
+  background-color: black !important;
+  color: #F7EFCE !important;
+  border-radius: 10px;
+  padding: 15px;
+  display: block;
+  width: 100%;
+  transition: 0.3s;
+}
+
+.login-div {
+  width: 20%;
+  margin: 0px auto;
+  margin-top: 150px;
+  padding: 20px;
+  border-radius: 25px;
+  border: solid 2px #F7EFCE;
+}
+
+.login-div input {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 15px;
+  outline: none;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+/*.display-none {
+  display: none
+}
+
+.hide {
+  visibility: hidden;
+}*/
