--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -73,21 +73,25 @@ h3 {
 }
 
 .container-results {
-  display: flex;
+  display: flex !important;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 30px;
+  align-content: center;
   display: none;
 }
 
-.final-drink {
-  display: flex;
+.container-drinks {
+  display: flex !important;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   line-height: 50px;
   padding: 30px;
   font-family: 'Lato', sans-serif;
+}
+
+.final-drink {
   display: none;
 }
 
@@ -97,11 +101,18 @@ h3 {
   margin: 30px;
 }
 
-drinkThumb2 {
-  max-height: 350px;
-  max-width: 350px;
+.container-table {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.drinkThumb2 {
+  max-height: 550px;
+  max-width: 550px;
   margin: auto 0;
-  width: 200px;
 }
 
 .info {
@@ -111,13 +122,18 @@ drinkThumb2 {
 }
 
 .results-table {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
   text-align: center;
   margin: auto 0px;
   width: 300px;
 }
 
 td {
-  line-height: 5px;
+  line-height: 30px;
+  vertical-align: middle !important;
 }
 
 .login-input,
@@ -144,6 +160,7 @@ td {
   padding: 20px;
   border-radius: 25px;
   border: solid 2px #F7EFCE;
+  display: none;
 }
 
 .login-input {
@@ -156,11 +173,3 @@ td {
   width: 100%;
   margin-bottom: 20px;
 }
-
-/*.display-none {
-  display: none
-}
-
-.hide {
-  visibility: hidden;
-}*/
