--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -92,6 +92,10 @@ h3 {
   display: none;
 }
 
+.results-img {
+  border-radius: 10px;
+}
+
 .drinkThumb1 {
   max-height: 250px;
   max-width: 250px;
@@ -102,6 +106,7 @@ h3 {
   max-height: 550px;
   max-width: 550px;
   margin: auto 0;
+  border-radius: 10px;
 }
 
 .instructions {
