--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -23,14 +23,20 @@ h3 {
 }
 
 .carousel {
-  margin-left: 250px;
-  margin-right: 250px;
+  margin: auto;
   padding-top: 20px;
   padding-bottom: 20px;
+  max-width: 1000px;
 }
+
+.carousel-inner {
+  border-radius: 10px !important;
+}
+
 
 .d-block {
   max-height: 600px;
+  border-radius: 10px !important;
 }
 
 .container {
@@ -51,9 +57,12 @@ h3 {
 .random-four {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin: 0 auto;
   align-content: center;
+  justify-content: space-around;
 }
+
 
 .btn {
   margin-top: 10px;
