--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -15,7 +15,7 @@ h3 {
 }
 
 .navbar {
-  background-color: #F7EFCE !important;
+  background-color: #f7efce !important;
 }
 
 .nav-link {
@@ -36,7 +36,6 @@ h3 {
 .carousel-inner {
   border-radius: 10px !important;
 }
-
 
 .d-block {
   max-height: 600px;
@@ -67,21 +66,20 @@ h3 {
   justify-content: space-around;
 }
 
-
 .btn {
   margin-top: 10px;
-  border-color: #F7EFCE !important;
-  color: #F7EFCE !important;
+  border-color: #f7efce !important;
+  color: #f7efce !important;
 }
 
 .btn:hover,
 .login-btn:hover {
-  background-color: #F7EFCE !important;
+  background-color: #f7efce !important;
   color: black !important;
 }
 
 .logout-btn:hover {
-  background-color: #F7EFCE !important;
+  background-color: #f7efce !important;
   color: black !important;
   border-color: black !important;
 }
@@ -114,6 +112,17 @@ h3 {
 
 .results-img {
   border-radius: 10px;
+}
+
+@media only screen and (max-width: 400px) {
+  .results-img,
+  .img-fluid {
+    height: 150px;
+    width: 150px;
+  }
+  .searchDrinks {
+    margin: 0 auto;
+  }
 }
 
 .drinkThumb1 {
@@ -166,7 +175,6 @@ td {
   vertical-align: middle !important;
 }
 
-
 #login-msg {
   text-align: center;
 }
@@ -180,9 +188,9 @@ td {
 .login-btn,
 .logout-btn {
   margin-top: 10px !important;
-  border: solid 1px #F7EFCE !important;
+  border: solid 1px #f7efce !important;
   background-color: black !important;
-  color: #F7EFCE !important;
+  color: #f7efce !important;
   border-radius: 10px !important;
   padding: 15px !important;
   display: block !important;
@@ -194,20 +202,20 @@ td {
   flex-direction: column;
   align-content: center;
   background: black;
-  color: #F7EFCE;
+  color: #f7efce;
   width: 25%;
   margin: 0px auto;
   margin-top: 125px;
   padding: 20px;
   border-radius: 10px;
-  border: solid 2px #F7EFCE;
+  border: solid 2px #f7efce;
 }
 
 .login-input {
   display: block;
-  border: 1px solid #F7EFCE;
+  border: 1px solid #f7efce;
   border-radius: 5px;
-  background: #F7EFCE;
+  background: #f7efce;
   color: black;
   padding: 15px;
   outline: none;
@@ -223,4 +231,3 @@ td {
   padding: 1px;
   display: none;
 }
-
