--- a/assets/css/mixerStyles.css
+++ b/assets/css/mixerStyles.css
@@ -232,6 +232,9 @@ td {
   justify-content: center;
   align-content: center;
   align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   background-color: #f7efce !important;
 }
 
